fix misspelling + add infer routes
